--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-apollo-app",
+  "name": "my-apollo-playground",
   "version": "1.0.0",
   "description": "A simple app to test out GraphQL Apollo (along with Suspense).",
   "main": "index.js",
@@ -20,11 +20,14 @@
     "@apollo/react-hooks": "^3.0.1",
     "apollo-boost": "^0.4.4",
     "apollo-client": "^2.6.4",
+    "gojs": "^2.1.2",
+    "gojs-react": "^1.0.4",
     "graphql-tag": "^2.10.1",
     "react": "^16.9.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.11.0",
-    "react-scripts": "^3.1.1"
+    "react-scripts": "^3.1.1",
+    "yarn": "^1.19.2"
   },
   "browserslist": {
     "production": [
