--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@apollo/react-hooks": "^3.0.1",
     "apollo-boost": "^0.4.4",
     "apollo-client": "^2.6.4",
+    "apollo-link-ws": "^1.0.19",
     "gojs": "^2.1.2",
     "gojs-react": "^1.0.4",
     "graphql-tag": "^2.10.1",
@@ -27,6 +28,7 @@
     "react-apollo": "^3.1.3",
     "react-dom": "^16.11.0",
     "react-scripts": "^3.1.1",
+    "subscriptions-transport-ws": "^0.9.16",
     "yarn": "^1.19.2"
   },
   "browserslist": {
