--- a/package.json
+++ b/package.json
@@ -17,19 +17,16 @@
     "node": "^12.8.1"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^3.0.1",
-    "apollo-boost": "^0.4.4",
-    "apollo-client": "^2.6.4",
-    "apollo-link-ws": "^1.0.19",
-    "gojs": "^2.1.2",
-    "gojs-react": "^1.0.4",
-    "graphql-tag": "^2.10.1",
-    "react": "^16.9.0",
-    "react-apollo": "^3.1.3",
-    "react-dom": "^16.11.0",
-    "react-scripts": "^3.1.1",
-    "subscriptions-transport-ws": "^0.9.16",
-    "yarn": "^1.19.2"
+    "@apollo/client": "^3.1.3",
+    "@types/react": "^16.9.47",
+    "gojs": "^2.1.23",
+    "gojs-react": "^1.0.8",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.3",
+    "subscriptions-transport-ws": "^0.9.18",
+    "typescript": "^4.0.2",
+    "yarn": "^1.22.4"
   },
   "browserslist": {
     "production": [
