--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "concurrently": "^5.0.0",
     "graphql": "^14.4.2",
     "mongodb": "^3.3.4",
+    "mongodb-client-encryption": "^1.1.0",
     "node": "^12.8.1"
   },
   "dependencies": {
     "@apollo/client": "^3.1.3",
+    "@types/mongodb": "^3.5.26",
     "@types/react": "^16.9.47",
     "gojs": "^2.1.23",
     "gojs-react": "^1.0.8",
