--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "start": "concurrently \"react-scripts start\" \"node index.js\""
   },
   "devDependencies": {
-    "apollo-server": "^2.8.2",
-    "concurrently": "^5.0.0",
-    "graphql": "^14.4.2",
-    "mongodb": "^3.3.4",
+    "apollo-server": "^2.17.0",
+    "concurrently": "^5.3.0",
+    "graphql": "^15.3.0",
+    "mongodb": "^3.6.0",
     "mongodb-client-encryption": "^1.1.0",
     "node": "^12.8.1"
   },
@@ -23,12 +23,12 @@
     "@types/react": "^16.9.47",
     "gojs": "^2.1.23",
     "gojs-react": "^1.0.8",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "17.0.0-rc.1",
+    "react-dom": "17.0.0-rc.1",
     "react-scripts": "^3.4.3",
     "subscriptions-transport-ws": "^0.9.18",
     "typescript": "^4.0.2",
-    "yarn": "^1.22.4"
+    "yarn": "^1.22.5"
   },
   "browserslist": {
     "production": [
